--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
           <li class="active"><a href="index.html"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="#portfolio"><i class="bx bx-book-content"></i> Portfolio</a></li>
-          <li><a href="#services"><i class="bx bx-server"></i> Services</a></li>
+          <!--<li><a href="#portfolio"><i class="bx bx-book-content"></i> Portfolio</a></li> -->
+          <li><a href="#services"><i class="bx bx-server"></i> Certifications</a></li>
           <li><a href="#contact"><i class="bx bx-envelope"></i> Contact</a></li>
 
         </ul>
@@ -104,7 +104,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 9 June 1990</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.example.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.vineetjanbandhu.com</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> 9860749042</li>
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Pune, Maharashtra</li>
                 </ul>
@@ -117,9 +117,6 @@
                 </ul>
               </div>
             </div>
-            <p>
-              
-            </p>
           </div>
         </div>
 
@@ -134,7 +131,7 @@
           <h2>Professional Objective</h2>
           <p> To take up challenging opportunities in Software Engineering involving development and Testing of applications so as to lead the organization and myself towards the goals and also to create benchmarks for other team players.  </p>
         </div>
-
+        <!--
         <div class="row no-gutters">
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
@@ -169,7 +166,7 @@
             </div>
           </div>
 
-        </div>
+        </div> -->
 
       </div>
     </section><!-- End Facts Section -->
@@ -189,21 +186,21 @@
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">Python <i class="val">100%</i></span>
+              <span class="skill">Python <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">CSS <i class="val">90%</i></span>
+              <span class="skill">Perl <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">JavaScript <i class="val">75%</i></span>
+              <span class="skill">Shell <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -214,21 +211,21 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">PHP <i class="val">80%</i></span>
+              <span class="skill">Core Java <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">WordPress/CMS <i class="val">90%</i></span>
+              <span class="skill">Selenium Webdriver <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Photoshop <i class="val">55%</i></span>
+              <span class="skill">Ada <i class="val">55%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -260,11 +257,22 @@
             <div class="resume-item pb-0">
               <h4>Vineet Janbandhu</h4>
               <p><em>Scrum master certified. 7.8+ years Experience in Server side and Automation testing using JAVA, Python, Perl, shell, Robot Framework and selenium.</em></p>
-             <!-- <ul>
-                <li>Pune</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
-              </ul> -->
+             <ul>
+			    <li>Siemens limited (March 2017 to present as Senior Design Engineer)</li> 
+				<li>Persistent System limited (Jan 2013 to March 2017 as Module Lead)</li> 
+                <li>Handling end to end release process (Safety software)</li>
+				<li>Development and bug fixes in ada for onboard train systems</li>
+				<li>Over 7.8 years of experience In Server Side Testing and Automation testing using Python on Unix platform</li> 
+				<li>Experience in shell, Perl, Python scripting</li>
+				<li>Extensively involved in Manual Testing and Automation Testing</li>
+				<li>Experience on UNIX and Windows environment</li>
+				<li>Well-versed with all stages of Software Development Life Cycle (SDLC) and Software Testing Life Cycle</li>
+				<li>(STLC) and familiar with various life cycle model like Agile, Waterfall and ‘V’ model</li>
+				<li>Exposure in Python, Perl, Shell scripting, Java with Selenium Web Driver, TestNG, Robot Framework</li>
+				<li>Involvement in enhancement and optimization of Automation Framework</li> 
+				<li>Experience in Design, development and executing Test Cases</li>
+				<li>Good communication, interpersonal skills & strong Team Player</li>
+              </ul>
             </div>
 
             <h3 class="resume-title">Education</h3>
@@ -288,11 +296,10 @@
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>CBTC V3 Developement</h4>
-              <h5>2017 - Present</h5>
-              <p><em>Siemens Technology </em></p>
+              <p><em>Siemens Technology</em></p>
               <ul>
                 <li>Lead in the End to end development, and Testing of CBTC system</li>
-                <li>Delegate tasks to the 7 members of the team and provide Support on all aspects of the project. </li>
+                <li>Delegate tasks to the 7 members of the team and provide Support on all aspects of the project </li>
                 <li>Supervise the assessment of all requirements in order to ensure quality and accuracy of the Delivery</li>
                 <li>Oversee the efficient use of production project budgets and estimation</li>
 				<li>Responsible for creation of Delivering report and signing</li>
@@ -300,15 +307,100 @@
 			
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>CBTC Safety Test</h4>
+              <p><em>Siemens Technology</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
-              </ul>
+                <li>Automation and Manual testing</li>
+				<li>Automation using simulator in Perl</li>
+				<li>Writing Test-cases for Automation activity in Perl and shell</li> 
+				<li>Perform Regression testing</li>
+				<li>Maintaining and Running test suite</li>
+				<li>Analyzing the failure report</li>
+				<li>Supervise the assessment of all requirements in order to ensure quality and accuracy of the Delivery</li>
+			  </ul>
+            </div>
+			
+            <div class="resume-item">
+              <h4>Robot Framework</h4>
+              <p><em>Persistent Systems</em></p>
+              <ul>
+                <li>Creation and implemention of the Robot framework for the Selligent Automation project in Python</li>
+				<li>Responsible for analyzing the automation failure and reporting it depending on type – product defect/framework defect</li>
+				<li>Writing Test-cases for Automation activity in Perl and shell</li> 
+			  </ul>
+            </div>
+			
+            <div class="resume-item">
+              <h4>StrongView</h4>
+              <p><em>Persistent Systems</em></p>
+              <ul>
+                <li>Automation and Manual testing</li>
+				<li>Maintaining selenium framework</li>
+				<li>Running test suite and analyze the failure report</li> 
+				<li>Perform Regression testing</li>
+				<li>Maintaining and Running test suite</li>
+				<li>Analyzing the failure report</li>
+				<li>Development of scripts which help during Manual testing</li>
+			  </ul>
+            </div>
+			
+            <div class="resume-item">
+              <h4>Comverse NGVM</h4>
+              <p><em>Persistent Systems</em></p>
+              <ul>
+                <li>Development of tools like; Script to check the status of all the processes running in different servers</li>
+				<li>Automation Script to parse log file to get the Ipv4 Ipv6 request response</li>
+				<li>Writing Test-cases for Automation activity in Python and shell</li> 
+				<li>Perform Regression testing</li>
+				<li>Maintaining and Running test suite</li>
+				<li>Analyzing the failure report</li>
+				<li>Deployment of product in test lab</li>
+			  </ul>
+            </div>
+			
+            <div class="resume-item">
+              <h4>Openwave Appsuite Automation</h4>
+              <p><em>Persistent Systems</em></p>
+              <ul>
+                <li>Automation and Manual testing</li>
+				<li>Development and maintenance of the Selenium webdriver framework for project in Java</li>
+				<li>Creation the automated test cases for the Appsuite product</li> 
+				<li>Responsible for analyzing the automation failure and reporting it depending on type – product defect/framework defect</li>
+				<li>Maintaining and Running test suite</li>
+				<li>Analyzing the failure report</li>
+			  </ul>
+            </div>
+			
+            <div class="resume-item">
+              <h4>Migration validation Tool E-Mail MX</h4>
+              <p><em>Persistent Systems</em></p>
+              <ul>
+                <li>Automation and Manual testing</li>
+				<li>Development and maintainance of tool to support the new features added in migration tool</li>
+				<li>Involve in running the tool and analysis of results and reporting the failure</li> 
+				<li>Involve in finding the test cases and validation part for the tool</li>
+
+			  </ul>
+            </div>
+			<div class="resume-item">
+              <h4>Python Framework E-Mail MX</h4>
+              <p><em>Persistent Systems</em></p>
+              <ul>
+                <li>Enhancement to add some modules to automation framework</li>
+				<li>Support and development of the tool</li>
+				<li>Involve in running the tool and analysis of results and reporting the failure</li> 
+			  </ul>
+            </div>
+			<div class="resume-item">
+              <h4>E-Mail MX</h4>
+              <p><em>Persistent Systems</em></p>
+              <ul>
+                <li>Automation and Manual testing</li>
+				<li>Building Frame work for Migration automation in Python</li>
+				<li>Automation of Platform tool in Python with new frame work</li> 
+				<li>Writing framework/Test-cases for Automation activity in Perl and shell</li>
+				<li>Developed tools in shell and Perl which is responsible for sanity testing</li>
+			</ul>
             </div>
           </div>
         </div>
@@ -440,16 +532,18 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Services</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Certifications</h2>
         </div>
 
         <div class="row">
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
-            <div class="icon"><i class="icofont-computer"></i></div>
-            <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-            <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+            <!--<div class="icon"><i class="icofont-computer"></i></div> -->
+			<a href="https://certification.scrumalliance.org/accounts/879037-vineet-vijay/certifications/998058-csm">
+			<img src="assets/img/csm.png" class="testimonial-img" alt="">
+			</a>
+            <!--<h4 class="title"><a href="https://certification.scrumalliance.org/accounts/879037-vineet-vijay/certifications/998058-csm">CSM</a></h4>-->
           </div>
+		  <!--
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="icofont-chart-bar-graph"></i></div>
             <h4 class="title"><a href="">Dolor Sitema</a></h4>
@@ -475,12 +569,13 @@
             <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
             <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
           </div>
-        </div>
+        </div> -->
 
       </div>
     </section><!-- End Services Section -->
 
     <!-- ======= Testimonials Section ======= -->
+	<!--
     <section id="testimonials" class="testimonials section-bg">
       <div class="container">
 
@@ -573,23 +668,25 @@
               </div>
 
               <div class="email">
+			    <a href="mailto:vineetvj_7@yahoo.com" target="_blank">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <p>vineetvj_7@yahoo.com</p>
+                <p>vineetvj_7@yahoo.com</p></a>
               </div>
 
               <div class="phone">
-                <i class="icofont-phone"></i>
+                <a href="tel:9860749042">
+				<i class="icofont-phone"></i>
                 <h4>Call:</h4>
-                <p>9860749042</p>
+                <p>9860749042</p></a>
               </div>
-<!--
+
               <iframe src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJg1nKn_W7wjsRkaM2noDKqCk&key=AIzaSyAbDHrRSRrgLPsTdWbSnqn1oixmRhujrZk" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
-			  -->
+			  
             </div>
 
           </div>
-
+<!--
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
