--- a/index.html
+++ b/index.html
@@ -247,9 +247,9 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Resume</h2>
-          <p></p>
-        </div>
+          <h2>Resume</h2> 
+		  <p><em><button class="btn btn-primary btn-lg" onClick="location.href='assets/doc/CV_Vineet_Janbandhu.pdf'">Download PDF</button></em></p>
+		</div>
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
