--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Vineet Janbandhu</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <!--<a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
+          <a href="https://www.instagram.com/vineet_janbandhu/" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
           <a href="https://www.linkedin.com/in/vineet-janbandhu-46966315/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
@@ -60,8 +60,9 @@
         <ul>
           <li class="active"><a href="index.html"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
+		  <li><a href="#facts"><i class="bx bx-user"></i> <span>Professional Objective</span></a></li>
+		  <li><a href="#skills"><i class="bx bx-book-content"></i>Skills</a></li>
           <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <!--<li><a href="#portfolio"><i class="bx bx-book-content"></i> Portfolio</a></li> -->
           <li><a href="#services"><i class="bx bx-server"></i> Certifications</a></li>
           <li><a href="#contact"><i class="bx bx-envelope"></i> Contact</a></li>
 
@@ -103,17 +104,17 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 9 June 1990</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.vineetjanbandhu.com</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> 9860749042</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Pune, Maharashtra</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong>9 June 1990</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong>www.vineetjanbandhu.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong>9860749042</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong>Pune, Maharashtra</li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 30</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Electronics and Telecommunication Engineering</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> vineetvj_7@yahoo.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong>30</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong>Electronics and Telecommunication Engineering</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong>vineetvj_7@yahoo.com</li>
                 </ul>
               </div>
             </div>
@@ -188,14 +189,14 @@
             <div class="progress">
               <span class="skill">Python <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
               <span class="skill">Perl <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -203,6 +204,30 @@
               <span class="skill">Shell <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+			<div class="progress">
+              <span class="skill">Robot Framework <i class="val">50%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+			<div class="progress">
+              <span class="skill">Bugzilla<i class="val">90%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+			<div class="progress">
+              <span class="skill">MySQL<i class="val">60%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+			<div class="progress">
+              <span class="skill">Linux<i class="val">100%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -213,14 +238,14 @@
             <div class="progress">
               <span class="skill">Core Java <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
               <span class="skill">Selenium Webdriver <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -230,6 +255,31 @@
                 <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
+			<div class="progress">
+              <span class="skill">TestNG<i class="val">60%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+			<div class="progress">
+              <span class="skill">Simulators<i class="val">80%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+			<div class="progress">
+              <span class="skill">ClearQuest<i class="val">80%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+			<div class="progress">
+              <span class="skill">Windows<i class="val">90%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
 
           </div>
 
