--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Vineet Janbandhu</h4>
-              <p><em>Scrum master certified. 8+ years Experience in Server side and Automation testing using JAVA, Python, Perl, shell, Robot Framework and selenium.</em></p>
+              <p><em>Scrum master certified. 8 years Experience in Server side and Automation testing using JAVA, Python, Perl, shell, Robot Framework and selenium.</em></p>
              <ul>
 			    <li>Siemens Technology <h5>(March 2017 to present as Senior Design Engineer)</h5></li> 
 				<li>Persistent System limited <h5>(Jan 2013 to March 2017 as Module Lead)</h5></li> 
