--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Scrum master certified. 8 years Experience in Server side and Automation testing using JAVA, Python, Perl, shell, Robot Framework and selenium. </p>
+          <p>Scrum master certified. 8+ years Experience in Server side and Automation testing using JAVA, Python, Perl, shell, Robot Framework and selenium. </p>
         </div>
 
         <div class="row">
@@ -307,13 +307,13 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Vineet Janbandhu</h4>
-              <p><em>Scrum master certified. 8 years Experience in Server side and Automation testing using JAVA, Python, Perl, shell, Robot Framework and selenium.</em></p>
+              <p><em>8+ years Experience in Server side and Automation testing using JAVA, Python, Perl, shell, Robot Framework and selenium.</em></p>
              <ul>
-			    <li>Siemens Technology <h5>(March 2017 to present as Senior Design Engineer)</h5></li> 
+			    <li>Siemens Technology <h5>(March 2017 to present as Techical team lead)</h5></li> 
 				<li>Persistent System limited <h5>(Jan 2013 to March 2017 as Module Lead)</h5></li> 
                 <li>Handling end to end release process (Safety software)</li>
 				<li>Development and bug fixes in ada for onboard train systems</li>
-				<li>Over 7.8 years of experience In Server Side Testing and Automation testing using Python on Unix platform</li> 
+				<li>Over 8+ years of experience In Server Side Testing and Automation testing using Python on Unix platform</li> 
 				<li>Experience in shell, Perl, Python scripting</li>
 				<li>Extensively involved in Manual Testing and Automation Testing</li>
 				<li>Experience on UNIX and Windows environment</li>
