updateassets/doc/CV_Vineet_Janbandhu.pdf

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Scrum master certified. 8+ years Experience in Server side and Automation testing using JAVA, Python, Perl, shell, Robot Framework and selenium. </p>
+          <p>8.5+ years Experience in Server side and Automation testing using JAVA, Python, Perl, shell, Robot Framework and selenium. </p>
         </div>
 
         <div class="row">
@@ -311,18 +311,38 @@
              <ul>
 			    <li>Siemens Technology <h5>(March 2017 to present as Techical team lead)</h5></li> 
 				<li>Persistent System limited <h5>(Jan 2013 to March 2017 as Module Lead)</h5></li> 
-                <li>Handling end to end release process (Safety software)</li>
-				<li>Development and bug fixes in ada for onboard train systems</li>
-				<li>Over 8+ years of experience In Server Side Testing and Automation testing using Python on Unix platform</li> 
-				<li>Experience in shell, Perl, Python scripting</li>
-				<li>Extensively involved in Manual Testing and Automation Testing</li>
-				<li>Experience on UNIX and Windows environment</li>
-				<li>Well-versed with all stages of Software Development Life Cycle (SDLC) and Software Testing Life Cycle</li>
-				<li>(STLC) and familiar with various life cycle model like Agile, Waterfall and ‘V’ model</li>
-				<li>Exposure in Python, Perl, Shell scripting, Java with Selenium Web Driver, TestNG, Robot Framework</li>
-				<li>Involvement in enhancement and optimization of Automation Framework</li> 
-				<li>Experience in Design, development and executing Test Cases</li>
-				<li>Good communication, interpersonal skills & strong Team Player</li>
+			    <li>Over 8.5 years of experience in Server-Side Testing and Automation testing using Python on Linux/Unix platform.</li>
+				<li>Extensive experience in leading and managing testing tasks by analysis requirements, designing Test Plan/Test Strategy, Test Scripts, Test Tool management, Test Execution, Defect Management from initial till closure. </li>
+				<li>Proficient in analyzing and translating business requirements to technical requirements.</li>
+				<li>Expertise in handling review meetings with Higher Management, Client and with Stakeholders.</li>
+				<li>Excellent experience of maintaining business relationship with clients and customers.</li>
+				<li>Lead software project requirement management.</li>
+				<li>Coordinating with project stake holders situated at different geographic locations for requirements.</li>
+				<li>Track end-to-end progress of the software requirements and defect lifecycle.</li>
+				<li>Actively participate in tailoring generic processes for requirements and defect management for project.</li>
+				<li>Assign requirements and defects to responsible departments / stake holder based on software architecture.</li>
+				<li>Maintain dashboard, matrices for requirements and defects and take necessary action till closure.</li>
+				<li>Maintain end to end traceability of requirements with tools like Jira / RTC / Doors.</li>
+				<li>Maintain and update requirement documents with use cases in a discipline way to ease tracking.</li>
+				<li>Conduct trainings with Dev and QA team to make them understand the process, and requirements.</li>
+				<li>Clarify requirements with team if required</li>
+				<li>Maintain risk register and highlight risk to right stake holder, prepare mitigation plan.
+				<li>Extensive experience working on multiple projects by involving in UAT, GUI, Regression. E2E, Functional and Smoke testing for the various applications.</li>
+				<li>Experience in working on various testing tool like Jira, SharePoint.</li>
+				<li>Strong experience in leading and managing teams. </li>
+				<li>Strong experience in Shell, Perl, Python scripting. </li>
+				<li>Extensively involved in Manual Testing and Automation Testing.</li>
+				<li>Strong experience in writing Automation tools using Python on Linux/Unix platform (server side).</li>
+				<li>Strong experience in creating end to end deployment approach.</li>
+				<li>Experience on UNIX and Windows environment. </li>
+				<li>Development and bug fixes in ada for onboard train systems.</li>
+				<li>Well-versed with all stages of Software Development Life Cycle (SDLC) and Software Testing Life Cycle (STLC) and familiar with various life cycle model like Agile, Waterfall and ‘V’ model.</li>
+				<li>Exposure in Python, Shell scripting, Java with Selenium Web Driver, TestNG, Robot Framework. </li>
+				<li>Involvement in enhancement and optimization of Automation Framework.</li>
+				<li>Experience in Design, development and executing Test Cases.</li>
+				<li>Well versed knowledge in MS office.</li>
+				<li>Strong communication skills, written and interpersonal skills, quick learner, team player and ready to take ownership.</li>
+				<li>Excellent interpersonal skills, proven team player with an analytic bent to problem solving and delivering under high-stress environment.</li>
               </ul>
             </div>
 
