--- a/index.html
+++ b/index.html
@@ -307,11 +307,12 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Vineet Janbandhu</h4>
-              <p><em>8+ years Experience in Server side and Automation testing using JAVA, Python, Perl, shell, Robot Framework and selenium.</em></p>
+              <p><em>9+ years Experience in Server side and Automation testing using JAVA, Python, Perl, shell, Robot Framework and selenium.</em></p>
              <ul>
-			    <li>Siemens Technology <h5>(March 2017 to present as Techical team lead)</h5></li> 
-				<li>Persistent System limited <h5>(Jan 2013 to March 2017 as Module Lead)</h5></li> 
-			    <li>Over 8.5 years of experience in Server-Side Testing and Automation testing using Python on Linux/Unix platform.</li>
+		     	    <li>LNT Infotech <h5>(Sept 2021 to present as Senior Techical team lead)</h5></li> 	
+			    <li>Siemens Technology <h5>(March 2017 to Aug 2021 as Techical team lead)</h5></li> 
+			    <li>Persistent System limited <h5>(Jan 2013 to March 2017 as Module Lead)</h5></li> 
+			    <li>Over 9 years of experience in Server-Side Testing and Automation testing using Python on Linux/Unix platform.</li>
 				<li>Extensive experience in leading and managing testing tasks by analysis requirements, designing Test Plan/Test Strategy, Test Scripts, Test Tool management, Test Execution, Defect Management from initial till closure. </li>
 				<li>Proficient in analyzing and translating business requirements to technical requirements.</li>
 				<li>Expertise in handling review meetings with Higher Management, Client and with Stakeholders.</li>
