--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <!--<div class="icon"><i class="icofont-computer"></i></div> -->
 			<!--<a href="https://certification.scrumalliance.org/accounts/879037-vineet-vijay/certifications/998058-csm">-->
-			<img src="assets/img/istqb.png" class="testimonial-img" alt="">
+			<img src="assets/img/istqb.jpg" class="testimonial-img" alt="">
 			
 			</a>
             <!--<h4 class="title"><a href="https://certification.scrumalliance.org/accounts/879037-vineet-vijay/certifications/998058-csm">CSM</a></h4>-->
